k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tm-app-service
spec:
  selector:
    app: tm-app
  ports:
  - port: 80
    targetPort: 9998
  type: ClusterIP
